src/snapshots/antlr4_runtime__tree_pattern__tests__split_custom_delimiters.snap
---
source: src/tree_pattern.rs
expression: chunks
---
[
    Text(
        "x ",
    ),
    Tag {
        name: "expr",
        label: None,
    },
    Text(
        " y",
    ),
]
