src/snapshots/antlr4_runtime__tree_pattern__tests__split_rejects_malformed.snap
---
source: src/tree_pattern.rs
expression: errors
---
[
    (
        "<ID",
        "unterminated tag in pattern: <ID",
    ),
    (
        "ID>",
        "missing start tag in pattern: ID>",
    ),
    (
        "><",
        "tag delimiters out of order in pattern: ><",
    ),
    (
        "<>",
        "empty tag in pattern: <>",
    ),
    (
        "<a:>",
        "empty tag in pattern: <a:>",
    ),
]
